--- a/templates/page.html
+++ b/templates/page.html
@@ -2,9 +2,14 @@
 {% block content %}
 <div>
   <h1 id="blog-title">{{ page.title }}</h1>
+  <span>
   {% if page.date %}
   <small class="blog-date">{{ page.date }}</small>
   {% endif %}
+  {% for tag in page.taxonomies["tags"] %}
+      <a href="/tags/{{ tag }}">#{{ tag }}</a>
+      {% endfor %}
+  </span>
 </div>  
 <div id="blog">  
   {{ page.content | markdown | safe }}
