--- a/static/css/style.css
+++ b/static/css/style.css
@@ -125,32 +125,14 @@ blockquote {
     font-style: italic;
 }
 
-
-aside{
-    position: absolute;
-    top: 0.5em;
-    right: 0.5em;
-    width: fit-content;
-    max-width: 350px;
-    text-align: center;
-}
-aside blockquote {
-    font-size: 0.8em;
-}
-
-aside img{
-    padding: 0.1em;
-    border-radius: 20px;
-    vertical-align: top;
-    width: 45%;
-}
-
 #blog ul, #blog ol{
     padding-left: 4%;
     padding-right: 4%;
 }
 
 #blog img{
+    margin-left: auto;
+    margin-right: auto;
     max-width: 600px;
 }
 
